<resources>
    <string name="app_name">白带机</string>
    <string name="tab1">设备控制</string>
    <string name="tab2">检测记录</string>
    <string name="tab3">设备状态</string>
    <string name="tab4">设置</string>
    <string name="aimIp">目标IP地址</string>
    <string name="aimPort">目标端口号</string>
    <string name="ipValue">192.168.1.189</string>
    <string name="portValue">60000</string>
    <string name="connect">连接</string>
    <string name="startMachine">开始</string>
    <string name="resetMachine">复位</string>
    <string name="stopMachine">停止</string>
    <string name="continueMachine">继续上料</string>
    <string name="receiveContain">收到的内容</string>
    <string name="synchronize">数据同步</string>
    <string name="resultdetail">记录详情页面</string>
    <string name="ID">样品ID</string>
    <string name="SampleCode">样品编号</string>
    <string name="TestItem">检测项目</string>
    <string name="TestDateBegin">检测开始时间</string>
    <string name="TestDateEnd">检测结束时间</string>
    <string name="AuditDoctor">审核人</string>
    <string name="AuditTime">审核时间</string>
    <string name="ClientID">客户端ID</string>
    <string name="State">State</string>
    <string name="TestStep">TestStep</string>
    <string name="FrameNo">试管架编号</string>
    <string name="TubeNo">试管编号</string>
    <string name="ErrorInfo">错误信息</string>
    <string name="Remark">备注</string>
    <string name="Name">患者姓名</string>
    <string name="Age">患者年龄</string>
    <string name="PatientsType">患者类型</string>
    <string name="ApplyDepartment">申请科室</string>
    <string name="BedNum">床号</string>
    <string name="AdmissionNum">住院号</string>
    <string name="ApplyDoctor">申请医生</string>
    <string name="TV">滴虫</string>
    <string name="MOLDS">霉菌</string>
    <string name="COCCUS">球菌</string>
    <string name="BACILLUS">杆菌</string>
    <string name="WBC">白细胞</string>
    <string name="RBC">红细胞</string>
    <string name="SQEP">上皮细胞</string>
    <string name="Cleanliness">清洁度</string>
    <string name="DetectDate">检测时间</string>
    <string name="DetectDoctor">检测医生</string>
    <string name="displayAll">显示所有数据</string>
    <string name="search">搜索</string>
    <string name="searchRecord">记录查询页面</string>
    <string name="searchContent">请输入患者编号或姓名</string>
    <string name="allRecord">所有记录</string>
    <string name="searchResults">搜索结果</string>
    <string name="machineState">设备状态：</string>
    <string name="clickCheck">点击查看</string>
    <string name="countingFeeding">计数池上料</string>
    <string name="centrifugal">离心</string>
    <string name="microscopy">镜检</string>
    <string name="BVLoding">BV上料</string>
    <string name="BVwarmbath">BV温浴</string>
    <string name="lODING">上料</string>
    <string name="downloding">下料</string>
    <string name="canConnect">Can连接</string>
    <string name="camera">相机</string>
    <string name="lighting">光源</string>
    <string name="temperature1">温度1</string>
    <string name="temperature2">温度2</string>
    <string name="temperature3">温度3</string>
    <string name="temperature4">温度4</string>
    <string name="temperature5">温度5</string>
    <string name="temperature6">温度6</string>
    <string name="takeSample">采样</string>
    <string name="droppingliquid">BV滴液</string>
    <string name="countdroppingliquid">计数池滴液</string>
    <string name="wash">清洗</string>
    <string name="needle1">采样针1</string>
    <string name="needle2">采样针2</string>
    <string name="Lenspollution">镜头污染</string>
    <string name="countingcell">计数池</string>
    <string name="stopbuffer">终止液</string>
    <string name="devilliquor">废液</string>
    <string name="diluent">稀释液</string>
    <string name="bv">BV</string>
    <string name="chromogen">显色液</string>
    <string name="Maintenancefluid">保养液</string>
    <string name="washingliquid">清洗液</string>
</resources>
